---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/type_class_functor.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
